--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,11 @@ dependencies {
     compile 'me.dm7.barcodescanner:zxing:1.8.4'
     compile 'com.journeyapps:zxing-android-embedded:3.2.0@aar'
     compile 'com.google.zxing:core:3.2.1'
+
+// timber
+    implementation 'com.jakewharton.timber:timber:4.7.1'
+
+// butter knife
+    implementation 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 }
